performance improvement for day 4

--- a/aoc.cabal
+++ b/aoc.cabal
@@ -30,6 +30,7 @@ common shared-properties
         http-client,
         lens,
         lens-aeson,
+        massiv,
         mtl,
         parallel,
         parsec,
